Quick: Fix assertion fail after responding to certificate error

Don't reject the error one more time if it's already answered.

Task-number: QTBUG-55629
Change-Id: Ic8cbcbc41f107b9efe15af9cb67add41cf9903e6
Reviewed-by: Michael Brüning <michael.bruning@qt.io>